--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-uglify": "^5.0.1",
     "grunt-mkdir": "^1.1.0",
     "grunt-replace": "^2.0.2",
+    "husky": "^9.1.7",
     "jasmine-browser-runner": "^2.5.0",
     "jasmine-core": "^5.2.0",
     "js-yaml": "^3.13.1",
@@ -70,6 +71,7 @@
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.41",
     "moment-timezone-data-build": "github:yurikuzn/moment-timezone-data-build#0.1.1",
+    "puppeteer": "^24.1.0",
     "qrcodejs": "^1.0.0",
     "selectize": "github:selectize/selectize.js#v0.13.6",
     "set-value": ">=4.0.1",
